# ImageAnalysisCV

./: .gitignore  README.md
ColorImages/IntemsityTransformations/: main.cpp
ColorImages/IntemsityTransformations/transforms/include/: transforms.h
ColorImages/IntemsityTransformations/transforms/src/: transforms.cpp
ColorImages/IntensityTransformations/: CMakeLists.txt  main.cpp
ColorImages/IntensityTransformations/transforms/: CMakeLists.txt
ColorImages/IntensityTransformations/transforms/include/: transforms.h
ColorImages/IntensityTransformations/transforms/src/: transforms.cpp
ColorImages/TrafficLight/: CMakeLists.txt
ColorImages/TrafficLight/src/: CMakeLists.txt  main.cpp
ColorImages/heatmap/: CMakeLists.txt
ImageUtils/: CMakeLists.txt
ImageUtils/include/: image.h  video.h
ImageUtils/src/: image.cpp  video.cpp
